packages/markdown-core/extensions/ext_scanners.c
/* Generated by re2c 4.6 */


#include <stdlib.h>
#include "ext_scanners.h"

/* Scanners borrow an exact slice. A virtual NUL at its limit replaces the
 * former write-and-restore sentinel; neither input padding nor writable bytes
 * belong to the scanner contract. Cursor/marker offsets can consume a virtual
 * terminator without forming a pointer outside the borrowed slice. */
bufsize_t _ext_scan_at(bufsize_t (*scanner)(const unsigned char *, const unsigned char *),
                        const unsigned char *ptr, int len, bufsize_t offset)
{
    if (!ptr || offset < 0 || offset >= len) return 0;
    return scanner(ptr + offset, ptr + len);
}



bufsize_t _scan_table_start(const unsigned char *input, const unsigned char *limit)
{
  size_t p = 0, length = (size_t)(limit - input);
  size_t marker = 0;
  size_t start = p;

{
  unsigned char yych;
  static const unsigned char yybm[256] = {
      0,   0,   0,   0,   0,   0,   0,   0,
      0,  64,   0,  64,  64,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
     64,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0, 128,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0
  };
  yych = (p < length ? input[p] : 0);
  if (yych <= ' ') {
    if (yych <= '\n') {
      if (yych == '\t') goto yy2;
    } else {
      if (yych <= '\f') goto yy2;
      if (yych >= ' ') goto yy2;
    }
  } else {
    if (yych <= '9') {
      if (yych == '-') goto yy3;
    } else {
      if (yych <= ':') goto yy4;
      if (yych == '|') goto yy2;
    }
  }
  ++p;
yy1:
  { return 0; }
yy2:
  ++p;
  marker = p;
  yych = (p < length ? input[p] : 0);
  if (yybm[0+yych] & 64) goto yy5;
  if (yych == '-') goto yy7;
  if (yych == ':') goto yy8;
  goto yy1;
yy3:
  ++p;
  marker = p;
  yych = (p < length ? input[p] : 0);
  if (yybm[0+yych] & 128) goto yy7;
  if (yych <= ' ') {
    if (yych <= 0x08) goto yy1;
    if (yych <= '\r') goto yy10;
    if (yych <= 0x1F) goto yy1;
    goto yy10;
  } else {
    if (yych <= ':') {
      if (yych <= '9') goto yy1;
      goto yy9;
    } else {
      if (yych == '|') goto yy10;
      goto yy1;
    }
  }
yy4:
  ++p;
  marker = p;
  yych = (p < length ? input[p] : 0);
  if (yybm[0+yych] & 128) goto yy7;
  goto yy1;
yy5:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yybm[0+yych] & 64) goto yy5;
  if (yych == '-') goto yy7;
  if (yych == ':') goto yy8;
yy6:
  p = marker;
  goto yy1;
yy7:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yybm[0+yych] & 128) goto yy7;
  if (yych <= 0x1F) {
    if (yych <= '\n') {
      if (yych <= 0x08) goto yy6;
      if (yych <= '\t') goto yy9;
      goto yy11;
    } else {
      if (yych <= '\f') goto yy9;
      if (yych <= '\r') goto yy13;
      goto yy6;
    }
  } else {
    if (yych <= ':') {
      if (yych <= ' ') goto yy9;
      if (yych <= '9') goto yy6;
      goto yy9;
    } else {
      if (yych == '|') goto yy14;
      goto yy6;
    }
  }
yy8:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yybm[0+yych] & 128) goto yy7;
  goto yy6;
yy9:
  ++p;
  yych = (p < length ? input[p] : 0);
yy10:
  if (yych <= '\r') {
    if (yych <= '\t') {
      if (yych <= 0x08) goto yy6;
      goto yy9;
    } else {
      if (yych <= '\n') goto yy11;
      if (yych <= '\f') goto yy9;
      goto yy13;
    }
  } else {
    if (yych <= ' ') {
      if (yych <= 0x1F) goto yy6;
      goto yy9;
    } else {
      if (yych == '|') goto yy14;
      goto yy6;
    }
  }
yy11:
  ++p;
yy12:
  {
      return (bufsize_t)(p - start);
    }
yy13:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yych == '\n') goto yy11;
  goto yy12;
yy14:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yybm[0+yych] & 128) goto yy7;
  if (yych <= '\r') {
    if (yych <= '\t') {
      if (yych <= 0x08) goto yy6;
      goto yy14;
    } else {
      if (yych <= '\n') goto yy11;
      if (yych <= '\f') goto yy14;
      goto yy13;
    }
  } else {
    if (yych <= ' ') {
      if (yych <= 0x1F) goto yy6;
      goto yy14;
    } else {
      if (yych == ':') goto yy8;
      goto yy6;
    }
  }
}

}

bufsize_t _scan_table_cell(const unsigned char *input, const unsigned char *limit)
{
  size_t p = 0, length = (size_t)(limit - input);
  size_t marker = 0;
  size_t start = p;

{
  unsigned char yych;
  unsigned int yyaccept = 0;
  static const unsigned char yybm[256] = {
      0,  64,  64,  64,  64,  64,  64,  64,
     64,  64,   0,  64,  64,   0,  64,  64,
     64,  64,  64,  64,  64,  64,  64,  64,
     64,  64,  64,  64,  64,  64,  64,  64,
     64,  64,  64,  64,  64,  64,  64,  64,
     64,  64,  64,  64,  64,  64,  64,  64,
     64,  64,  64,  64,  64,  64,  64,  64,
     64,  64,  64,  64,  64,  64,  64,  64,
     64,  64,  64,  64,  64,  64,  64,  64,
     64,  64,  64,  64,  64,  64,  64,  64,
     64,  64,  64,  64,  64,  64,  64,  64,
     64,  64,  64,  64, 128,  64,  64,  64,
     64,  64,  64,  64,  64,  64,  64,  64,
     64,  64,  64,  64,  64,  64,  64,  64,
     64,  64,  64,  64,  64,  64,  64,  64,
     64,  64,  64,  64,   0,  64,  64,  64,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0
  };
  yych = (p < length ? input[p] : 0);
  if (yybm[0+yych] & 64) goto yy18;
  if (yych <= 0xEC) {
    if (yych <= 0xC1) {
      if (yych <= '\r') goto yy16;
      if (yych <= '\\') goto yy20;
    } else {
      if (yych <= 0xDF) goto yy21;
      if (yych <= 0xE0) goto yy22;
      goto yy23;
    }
  } else {
    if (yych <= 0xF0) {
      if (yych <= 0xED) goto yy24;
      if (yych <= 0xEF) goto yy23;
      goto yy25;
    } else {
      if (yych <= 0xF3) goto yy26;
      if (yych <= 0xF4) goto yy27;
    }
  }
yy16:
  ++p;
yy17:
  { return 0; }
yy18:
  yyaccept = 0;
  ++p;
  marker = p;
  yych = (p < length ? input[p] : 0);
  if (yybm[0+yych] & 64) goto yy18;
  if (yych <= 0xEC) {
    if (yych <= 0xC1) {
      if (yych <= '\r') goto yy19;
      if (yych <= '\\') goto yy20;
    } else {
      if (yych <= 0xDF) goto yy28;
      if (yych <= 0xE0) goto yy30;
      goto yy31;
    }
  } else {
    if (yych <= 0xF0) {
      if (yych <= 0xED) goto yy32;
      if (yych <= 0xEF) goto yy31;
      goto yy33;
    } else {
      if (yych <= 0xF3) goto yy34;
      if (yych <= 0xF4) goto yy35;
    }
  }
yy19:
  { return (bufsize_t)(p - start); }
yy20:
  yyaccept = 0;
  ++p;
  marker = p;
  yych = (p < length ? input[p] : 0);
  if (yybm[0+yych] & 128) goto yy20;
  if (yych <= 0xDF) {
    if (yych <= '\f') {
      if (yych <= 0x00) goto yy19;
      if (yych == '\n') goto yy19;
      goto yy18;
    } else {
      if (yych <= '\r') goto yy19;
      if (yych <= 0x7F) goto yy18;
      if (yych <= 0xC1) goto yy19;
      goto yy28;
    }
  } else {
    if (yych <= 0xEF) {
      if (yych <= 0xE0) goto yy30;
      if (yych == 0xED) goto yy32;
      goto yy31;
    } else {
      if (yych <= 0xF0) goto yy33;
      if (yych <= 0xF3) goto yy34;
      if (yych <= 0xF4) goto yy35;
      goto yy19;
    }
  }
yy21:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yych <= 0x7F) goto yy17;
  if (yych <= 0xBF) goto yy18;
  goto yy17;
yy22:
  yyaccept = 1;
  ++p;
  marker = p;
  yych = (p < length ? input[p] : 0);
  if (yych <= 0x9F) goto yy17;
  if (yych <= 0xBF) goto yy28;
  goto yy17;
yy23:
  yyaccept = 1;
  ++p;
  marker = p;
  yych = (p < length ? input[p] : 0);
  if (yych <= 0x7F) goto yy17;
  if (yych <= 0xBF) goto yy28;
  goto yy17;
yy24:
  yyaccept = 1;
  ++p;
  marker = p;
  yych = (p < length ? input[p] : 0);
  if (yych <= 0x7F) goto yy17;
  if (yych <= 0x9F) goto yy28;
  goto yy17;
yy25:
  yyaccept = 1;
  ++p;
  marker = p;
  yych = (p < length ? input[p] : 0);
  if (yych <= 0x8F) goto yy17;
  if (yych <= 0xBF) goto yy31;
  goto yy17;
yy26:
  yyaccept = 1;
  ++p;
  marker = p;
  yych = (p < length ? input[p] : 0);
  if (yych <= 0x7F) goto yy17;
  if (yych <= 0xBF) goto yy31;
  goto yy17;
yy27:
  yyaccept = 1;
  ++p;
  marker = p;
  yych = (p < length ? input[p] : 0);
  if (yych <= 0x7F) goto yy17;
  if (yych <= 0x8F) goto yy31;
  goto yy17;
yy28:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yych <= 0x7F) goto yy29;
  if (yych <= 0xBF) goto yy18;
yy29:
  p = marker;
  if (yyaccept == 0) goto yy19;
  else goto yy17;
yy30:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yych <= 0x9F) goto yy29;
  if (yych <= 0xBF) goto yy28;
  goto yy29;
yy31:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yych <= 0x7F) goto yy29;
  if (yych <= 0xBF) goto yy28;
  goto yy29;
yy32:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yych <= 0x7F) goto yy29;
  if (yych <= 0x9F) goto yy28;
  goto yy29;
yy33:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yych <= 0x8F) goto yy29;
  if (yych <= 0xBF) goto yy31;
  goto yy29;
yy34:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yych <= 0x7F) goto yy29;
  if (yych <= 0xBF) goto yy31;
  goto yy29;
yy35:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yych <= 0x7F) goto yy29;
  if (yych <= 0x8F) goto yy31;
  goto yy29;
}

}

bufsize_t _scan_table_cell_end(const unsigned char *input, const unsigned char *limit)
{
  size_t p = 0, length = (size_t)(limit - input);
  size_t start = p;

{
  unsigned char yych;
  static const unsigned char yybm[256] = {
      0,   0,   0,   0,   0,   0,   0,   0,
      0, 128,   0, 128, 128,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
    128,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0
  };
  yych = (p < length ? input[p] : 0);
  if (yych == '|') goto yy37;
  ++p;
  { return 0; }
yy37:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yybm[0+yych] & 128) goto yy37;
  { return (bufsize_t)(p - start); }
}

}

bufsize_t _scan_table_row_end(const unsigned char *input, const unsigned char *limit)
{
  size_t p = 0, length = (size_t)(limit - input);
  size_t marker = 0;
  size_t start = p;

{
  unsigned char yych;
  static const unsigned char yybm[256] = {
      0,   0,   0,   0,   0,   0,   0,   0,
      0, 128,   0, 128, 128,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
    128,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0
  };
  yych = (p < length ? input[p] : 0);
  if (yych <= '\f') {
    if (yych <= 0x08) goto yy39;
    if (yych == '\n') goto yy42;
    goto yy41;
  } else {
    if (yych <= '\r') goto yy44;
    if (yych == ' ') goto yy41;
  }
yy39:
  ++p;
yy40:
  { return 0; }
yy41:
  ++p;
  marker = p;
  yych = (p < length ? input[p] : 0);
  if (yych <= 0x08) goto yy40;
  if (yych <= '\r') goto yy46;
  if (yych == ' ') goto yy46;
  goto yy40;
yy42:
  ++p;
yy43:
  { return (bufsize_t)(p - start); }
yy44:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yych == '\n') goto yy42;
  goto yy43;
yy45:
  ++p;
  yych = (p < length ? input[p] : 0);
yy46:
  if (yybm[0+yych] & 128) goto yy45;
  if (yych <= 0x08) goto yy47;
  if (yych <= '\n') goto yy42;
  if (yych <= '\r') goto yy44;
yy47:
  p = marker;
  goto yy40;
}

}

bufsize_t _scan_formula_dollar_inline_open(const unsigned char *input, const unsigned char *limit)
{
  size_t p = 0, length = (size_t)(limit - input);
  size_t start = p;

{
  unsigned char yych;
  yych = (p < length ? input[p] : 0);
  if (yych == '$') goto yy49;
  ++p;
  { return 0; }
yy49:
  ++p;
  { return (bufsize_t)(p - start); }
}

}

bufsize_t _scan_formula_dollar_backtick_open(const unsigned char *input, const unsigned char *limit)
{
  size_t p = 0, length = (size_t)(limit - input);
  size_t start = p;

{
  unsigned char yych;
  yych = (p < length ? input[p] : 0);
  if (yych == '$') goto yy52;
  ++p;
yy51:
  { return 0; }
yy52:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yych != '`') goto yy51;
  ++p;
  { return (bufsize_t)(p - start); }
}

}

bufsize_t _scan_formula_dollar_display_open(const unsigned char *input, const unsigned char *limit)
{
  size_t p = 0, length = (size_t)(limit - input);
  size_t start = p;

{
  unsigned char yych;
  yych = (p < length ? input[p] : 0);
  if (yych == '$') goto yy55;
  ++p;
yy54:
  { return 0; }
yy55:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yych != '$') goto yy54;
  ++p;
  { return (bufsize_t)(p - start); }
}

}

bufsize_t _scan_formula_latex_backslash_inline_open(const unsigned char *input, const unsigned char *limit)
{
  size_t p = 0, length = (size_t)(limit - input);
  size_t marker = 0;
  size_t start = p;

{
  unsigned char yych;
  yych = (p < length ? input[p] : 0);
  if (yych == '\\') goto yy58;
  ++p;
yy57:
  { return 0; }
yy58:
  ++p;
  marker = p;
  yych = (p < length ? input[p] : 0);
  if (yych != '\\') goto yy57;
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yych == '(') goto yy59;
  p = marker;
  goto yy57;
yy59:
  ++p;
  { return (bufsize_t)(p - start); }
}

}

bufsize_t _scan_formula_latex_backslash_display_open(const unsigned char *input, const unsigned char *limit)
{
  size_t p = 0, length = (size_t)(limit - input);
  size_t marker = 0;
  size_t start = p;

{
  unsigned char yych;
  yych = (p < length ? input[p] : 0);
  if (yych == '\\') goto yy62;
  ++p;
yy61:
  { return 0; }
yy62:
  ++p;
  marker = p;
  yych = (p < length ? input[p] : 0);
  if (yych != '\\') goto yy61;
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yych == '[') goto yy63;
  p = marker;
  goto yy61;
yy63:
  ++p;
  { return (bufsize_t)(p - start); }
}

}

/* Iterate lexical dash runs in an exact line-body slice. Whitespace is not
 * geometry: the caller maps authored tabs to source columns. */
int _scan_table_dash(const unsigned char **cursor, const unsigned char *limit,
                     const unsigned char **from)
{
    const unsigned char *input = *cursor;
    size_t p = 0, length = (size_t)(limit - input);
    for (;;) {
        size_t start = p;

{
  unsigned char yych;
  static const unsigned char yybm[256] = {
      0,   0,   0,   0,   0,   0,   0,   0,
      0,  64,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
     64,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0, 128,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0,
      0,   0,   0,   0,   0,   0,   0,   0
  };
  yych = (p < length ? input[p] : 0);
  if (yybm[0+yych] & 64) goto yy67;
  if (yych <= 0x00) goto yy65;
  if (yych == '-') goto yy68;
  goto yy66;
yy65:
  ++p;
  { *cursor = input + (p < length ? p : length); return start == length ? 0 : -1; }
yy66:
  ++p;
  { *cursor = input + p; return -1; }
yy67:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yybm[0+yych] & 64) goto yy67;
  { continue; }
yy68:
  ++p;
  yych = (p < length ? input[p] : 0);
  if (yybm[0+yych] & 128) goto yy68;
  { *from = input + start; *cursor = input + p; return 1; }
}

    }
}

int _scan_table_horizontal(const unsigned char *input, const unsigned char *limit)
{
  size_t p = 0, length = (size_t)(limit - input);
    size_t marker = 0;
